# SoloCode

./: .gitignore  Cargo.toml  README.md  package-lock.json
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/application/: judge_submission.rs  load_problem.rs  mod.rs  run_code.rs  save_submission.rs
backend/src/application/errors/: application_error.rs
backend/src/config/: db.rs  mod.rs
backend/src/domain/: mod.rs
backend/src/domain/entities/: execution_result.rs  judge_result.rs  mod.rs  problem.rs  submission.rs  test_result.rs  testcase.rs
backend/src/domain/errors/: database_error.rs  domain_error.rs  mod.rs
backend/src/domain/ports/: db_port.rs  mod.rs  runtime_port.rs
backend/src/domain/ports/repositories/: mod.rs  problem_repository.rs  submission_repository.rs
backend/src/domain/value_objects/: difficulty.rs  execution_mode.rs  judge_status.rs  language.rs  mod.rs  submission_execution_config.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/db/: db_adapter.rs  mapper.rs  mod.rs
backend/src/infrastructure/db/entities/: mod.rs  submission_entity.rs
backend/src/infrastructure/runtime/: c_wasm_runner.rs  js_wasm_runner.rs  mod.rs  python_wasm_runner.rs  runtime_adapter.rs  rust_wasm_runner.rs
backend/src/infrastructure/storage/: mod.rs
src-tauri/: tauri.conf.json
ui/: index.html  package-lock.json  package.json
ui/src/: ProblemDescription.tsx  ProblemExample.tsx  ProblemTabs.tsx  ProblemView.tsx  main.tsx  problemView.css
ui/src/css/: problemView.css  submissionCards.css  submissionsView.css
(+11 files in other folders)
